<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    android:scrollbars="vertical"
    android:background="@color/background_app"
    tools:context="SecondApp.ImcActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/viewMale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/background_component_selected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/viewFemale"
        app:cardCornerRadius="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_male"
            app:tint= "@color/white"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
            />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewFemale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/background_component"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/viewMale"
        app:cardCornerRadius="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_female"
                app:tint = "@color/white"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
            />



        </LinearLayout>



    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cajaAltura"
        android:layout_width="0dp"
        app:cardCornerRadius="25dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/background_component"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewMale">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
             />

            <TextView
                android:id="@+id/tvAltura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" 120cm"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold"
            />
            
            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsAltura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="120"
                android:valueTo="250"
                />




        </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cajaPeso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cajaEdad"
        app:layout_constraintTop_toBottomOf="@id/cajaAltura"
        app:cardBackgroundColor="@color/background_component"
        android:layout_margin="16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="16sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
            />

            <TextView
                android:id="@+id/tvPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text= "60"
                android:textSize="45sp"
                android:textColor="@color/white"
                android:textStyle="bold"
            />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnBajarPeso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/purple_500"
                    android:src="@drawable/ic_sub"
                    app:tint="@color/white"
                    android:layout_marginEnd="10sp"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSumarPeso"
                    app:backgroundTint="@color/purple_500"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_plus"
                    app:tint="@color/white"
                    android:layout_height="wrap_content"/>


                </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cajaEdad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        app:layout_constraintStart_toEndOf="@id/cajaPeso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cajaAltura"
        app:cardBackgroundColor="@color/background_component"
        android:layout_margin="16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                />

            <TextView
                android:id="@+id/tvEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text= "60"
                android:textSize="45sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnMenosEdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_sub"
                    app:backgroundTint="@color/purple_500"
                    app:tint="@color/white"
                    android:layout_marginEnd="16sp"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnMasEdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_plus"
                    app:backgroundTint="@color/purple_500"
                    app:tint="@color/white"/>



            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>





    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:textAllCaps="true"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cajaPeso"
        android:layout_marginTop="20dp"/>







</androidx.constraintlayout.widget.ConstraintLayout>